@@ -23,6 +23,7 @@ import org.appcelerator.titanium.view.TiUIView;
 
 import android.graphics.Color;
 import android.graphics.Matrix;
+import android.graphics.Point;
 import android.graphics.Rect;
 import android.graphics.RectF;
 import android.graphics.drawable.ColorDrawable;
@@ -31,6 +32,8 @@ import android.graphics.drawable.TransitionDrawable;
 import android.os.Build;
 import android.os.Looper;
 import android.os.MessageQueue;
+import android.util.FloatMath;
+import android.util.TypedValue;
 import android.view.View;
 import android.view.ViewGroup;
 import android.view.ViewParent;
@@ -38,7 +41,6 @@ import android.view.animation.AlphaAnimation;
 import android.view.animation.Animation;
 import android.view.animation.AnimationSet;
 import android.view.animation.LinearInterpolator;
-import android.view.animation.ScaleAnimation;
 import android.view.animation.Transformation;
 import android.view.animation.TranslateAnimation;
 
@@ -57,9 +59,9 @@ public class TiAnimationBuilder
 	protected Double fromOpacity = null;
 	protected Double repeat = null;
 	protected Boolean autoreverse = null;
-	protected Integer top = null, bottom = null, left = null, right = null;
-	protected Integer centerX = null, centerY = null;
-	protected Integer width = null, height = null;
+	protected String top = null, bottom = null, left = null, right = null;
+	protected String centerX = null, centerY = null;
+	protected String width = null, height = null;
 	protected Integer backgroundColor = null;
 	
 	protected TiAnimation animationProxy;
@@ -121,33 +123,33 @@ public class TiAnimationBuilder
 			autoreverse = TiConvert.toBoolean(options, TiC.PROPERTY_AUTOREVERSE);
 		}
 		if (options.containsKey(TiC.PROPERTY_TOP)) {
-			top = TiConvert.toInt(options, TiC.PROPERTY_TOP);
+			top = TiConvert.toString(options, TiC.PROPERTY_TOP);
 		}
 		if (options.containsKey(TiC.PROPERTY_BOTTOM)) {
-			bottom = TiConvert.toInt(options, TiC.PROPERTY_BOTTOM);
+			bottom = TiConvert.toString(options, TiC.PROPERTY_BOTTOM);
 		}
 		if (options.containsKey(TiC.PROPERTY_LEFT)) {
-			left = TiConvert.toInt(options, TiC.PROPERTY_LEFT);
+			left = TiConvert.toString(options, TiC.PROPERTY_LEFT);
 		}
 		if (options.containsKey(TiC.PROPERTY_RIGHT)) {
-			right = TiConvert.toInt(options, TiC.PROPERTY_RIGHT);
+			right = TiConvert.toString(options, TiC.PROPERTY_RIGHT);
 		}
 		if (options.containsKey(TiC.PROPERTY_CENTER)) {
 			Object centerPoint = options.get(TiC.PROPERTY_CENTER);
 			if (centerPoint instanceof HashMap) {
 				HashMap center = (HashMap) centerPoint;
-				centerX = TiConvert.toInt(center, TiC.PROPERTY_X);
-				centerY = TiConvert.toInt(center, TiC.PROPERTY_Y);
+				centerX = TiConvert.toString(center, TiC.PROPERTY_X);
+				centerY = TiConvert.toString(center, TiC.PROPERTY_Y);
 				
 			} else {
 				Log.e(LCAT, "Invalid argument type for center property. Ignoring");
 			}
 		}
 		if (options.containsKey(TiC.PROPERTY_WIDTH)) {
-			width = TiConvert.toInt(options, TiC.PROPERTY_WIDTH);
+			width = TiConvert.toString(options, TiC.PROPERTY_WIDTH);
 		}
 		if (options.containsKey(TiC.PROPERTY_HEIGHT)) {
-			height = TiConvert.toInt(options, TiC.PROPERTY_HEIGHT);
+			height = TiConvert.toString(options, TiC.PROPERTY_HEIGHT);
 		}
 		if (options.containsKey(TiC.PROPERTY_BACKGROUND_COLOR)) {
 			backgroundColor = TiConvert.toColor(options, TiC.PROPERTY_BACKGROUND_COLOR);
@@ -211,10 +213,11 @@ public class TiAnimationBuilder
 	{
 		this.view = view;
 		this.viewProxy = viewProxy;
-		
+		TiUIView tiView = viewProxy.peekView();
+
 		AnimationSet as = new AnimationSet(false);
 		AnimationListener animationListener = new AnimationListener();
-		
+
 		if (toOpacity != null) {
 			if (viewProxy.hasProperty(TiC.PROPERTY_OPACITY)) {
 				fromOpacity = TiConvert.toDouble(viewProxy.getProperty(TiC.PROPERTY_OPACITY));
@@ -222,31 +225,31 @@ public class TiAnimationBuilder
 			} else {
 				fromOpacity = 1.0 - toOpacity;
 			}
-			
+
 			Animation animation = new AlphaAnimation(fromOpacity.floatValue(), toOpacity.floatValue());
 			applyOpacity = true;
 			addAnimation(as, animation);
 			animation.setAnimationListener(animationListener);
 
-			TiUIView uiView = viewProxy.peekView();
 			if (viewProxy.hasProperty(TiC.PROPERTY_OPACITY) && fromOpacity != null && toOpacity != null
-				&& uiView != null) {
+				&& tiView != null) {
 				// Initialize the opacity to 1 when we are going to change it in
 				// the animation. If the opacity of the view was initialized to
 				// 0, the animation doesn't work
-				uiView.setOpacity(1);
+				tiView.setOpacity(1);
 			}
 		}
-		
+
 		if (backgroundColor != null) {
 			int fromBackgroundColor = 0;
-			
+
 			if (viewProxy.hasProperty(TiC.PROPERTY_BACKGROUND_COLOR)) {
 				fromBackgroundColor = TiConvert.toColor(TiConvert.toString(viewProxy.getProperty(TiC.PROPERTY_BACKGROUND_COLOR)));
 			} else {
 				Log.w(LCAT, "Cannot animate view without a backgroundColor. View doesn't have that property. Using #00000000");
 				fromBackgroundColor = Color.argb(0,0,0,0);
 			}
+
 			Animation a = new TiColorAnimation(view, fromBackgroundColor, backgroundColor);
 			addAnimation(as, a);
 		}
@@ -255,65 +258,16 @@ public class TiAnimationBuilder
 			as.setFillAfter(true);
 			as.setFillEnabled(true);
 
-			TiUIView tiView = viewProxy.peekView();
-
-			// For scale animations, rely on the Android-provided ScaleAnimation rather than our
-			// TiMatrixAnimation and Operation.
 			Animation anim;
-			if (tdm.isScaleOperation()) {
-				// fromX, toX, fromY, toY, anchorX, anchorY
-				float[] params = tdm.getScaleOperationParameters();
-				float fromX = params[0];
-				float fromY = params[2];
-
-				if (fromX == Ti2DMatrix.VALUE_UNSPECIFIED) {
-					if (tiView != null) {
-						fromX = tiView.getAnimatedXScale();
-					} else {
-						fromX = 1.0f; // i.e., regular size.
-					}
-				}
-
-				if (fromY == Ti2DMatrix.VALUE_UNSPECIFIED) {
-					if (tiView != null) {
-						fromY = tiView.getAnimatedYScale();
-					} else {
-						fromY = 1.0f; // i.e., regular size.
-					}
-				}
-
-				anim = new ScaleAnimation(fromX, params[1], fromY, params[3],
-					Animation.RELATIVE_TO_SELF, params[4],
-					Animation.RELATIVE_TO_SELF, params[5]);
-
-				// Remember the toX, toY
-				if (tiView != null) {
-					tiView.setAnimatedXScale(params[1]);
-					tiView.setAnimatedYScale(params[3]);
-				}
-
-			} else {
-
-				if (tdm.isRotateOperation()) {
-					// Make sure we rotate from the right starting position,
-					// in case a rotation has already occurred.
-					float[] params = tdm.getRotateOperationParameters();
-					float fromDegrees = params[0];
-					float toDegrees = params[1];
-
-					if (fromDegrees == Ti2DMatrix.VALUE_UNSPECIFIED) {
-						fromDegrees = tiView.getAnimatedRotationDegrees();
-						tdm.setRotationFromDegrees(fromDegrees);
-					}
-
-					// And remember for next time.
-					tiView.setAnimatedRotationDegrees(toDegrees);
-
-				}
-
-				anim = new TiMatrixAnimation(tdm, anchorX, anchorY);
-
+			if (tdm.hasScaleOperation() && tiView != null) {
+				tiView.setAnimatedScaleValues(tdm.verifyScaleValues(tiView, (autoreverse != null && autoreverse.booleanValue())));
 			}
+
+			if (tdm.hasRotateOperation() && tiView != null) {
+				tiView.setAnimatedRotationDegrees(tdm.verifyRotationValues(tiView, (autoreverse != null && autoreverse.booleanValue())));
+			}
+
+			anim = new TiMatrixAnimation(tdm, anchorX, anchorY);
 
 			anim.setFillAfter(true);
 
@@ -338,26 +292,46 @@ public class TiAnimationBuilder
 			TiDimension optionTop = null, optionBottom = null;
 			TiDimension optionLeft = null, optionRight = null;
 			TiDimension optionCenterX = null, optionCenterY = null;
-			
+
+			// Note that we're stringifying the values to make sure we
+			// use the correct TiDimension constructor, except when
+			// we know the values are expressed for certain in pixels.
 			if (top != null) {
 				optionTop = new TiDimension(top, TiDimension.TYPE_TOP);
+			} else {
+				optionTop = new TiDimension(view.getTop(), TiDimension.TYPE_TOP);
+				optionTop.setUnits(TypedValue.COMPLEX_UNIT_PX);
 			}
+
 			if (bottom != null) {
 				optionBottom = new TiDimension(bottom, TiDimension.TYPE_BOTTOM);
+			} else {
+				optionBottom = new TiDimension(view.getBottom(), TiDimension.TYPE_BOTTOM);
+				optionBottom.setUnits(TypedValue.COMPLEX_UNIT_PX);
 			}
+
 			if (left != null) {
 				optionLeft = new TiDimension(left, TiDimension.TYPE_LEFT);
+			} else {
+				optionLeft = new TiDimension(view.getLeft(), TiDimension.TYPE_LEFT);
+				optionLeft.setUnits(TypedValue.COMPLEX_UNIT_PX);
 			}
+
 			if (right != null) {
 				optionRight = new TiDimension(right, TiDimension.TYPE_RIGHT);
+			} else {
+				optionRight = new TiDimension(view.getRight(), TiDimension.TYPE_RIGHT);
+				optionRight.setUnits(TypedValue.COMPLEX_UNIT_PX);
 			}
+
 			if (centerX != null) {
 				optionCenterX = new TiDimension(centerX, TiDimension.TYPE_CENTER_X);
 			}
+
 			if (centerY != null) {
 				optionCenterY = new TiDimension(centerY, TiDimension.TYPE_CENTER_Y);
 			}
-			
+
 			int horizontal[] = new int[2];
 			int vertical[] = new int[2];
 			ViewParent parent = view.getParent();
@@ -370,11 +344,32 @@ public class TiAnimationBuilder
 			//TODO: center
 			TiCompositeLayout.computePosition(parentView, optionLeft, optionCenterX, optionRight, w, 0, parentWidth, horizontal);
 			TiCompositeLayout.computePosition(parentView, optionTop, optionCenterY, optionBottom, h, 0, parentHeight, vertical);
-			
-			Animation animation = new TranslateAnimation(Animation.RELATIVE_TO_SELF, 0, Animation.ABSOLUTE, horizontal[0]-x,
-				Animation.RELATIVE_TO_SELF, 0, Animation.ABSOLUTE, vertical[0]-y);
+
+			// Determine where the view has been animated to already (if at all), because it's from that
+			// point where we'll want to animate now, rather than from the "true", non-animated position.
+			// Android has no built-in way of telling us the location to where the view has already been animated,
+			// so we have to look it up from a cache we keep maintain ourselves directly on the tiView.
+			int previousXDelta = 0, previousYDelta = 0;
+			int newXDelta = horizontal[0] - x;
+			int newYDelta = vertical[0] - y;
+			if (tiView != null) {
+				Point currentTranslation = tiView.getAnimatedXYTranslationValues();
+				if (currentTranslation != null) {
+					previousXDelta = currentTranslation.x;
+					previousYDelta = currentTranslation.y;
+				}
+			}
+
+			Animation animation = new TranslateAnimation(Animation.ABSOLUTE, previousXDelta, Animation.ABSOLUTE, newXDelta,
+				Animation.ABSOLUTE, previousYDelta, Animation.ABSOLUTE, newYDelta);
 			animation.setFillEnabled(true);
 			animation.setFillAfter(true);
+
+			// Remember where we're going to, since there is no native way to look it up later.
+			// We don't need to remember it if we're autoreversing, however.
+			if (tiView != null && (autoreverse == null || !autoreverse.booleanValue())) {
+				tiView.setAnimatedXYTranslationValues(new Point(newXDelta, newYDelta));
+			}
 
 			if (duration != null) {
 				animation.setDuration(duration.longValue());
@@ -383,23 +378,43 @@ public class TiAnimationBuilder
 			as.setFillEnabled(true);
 			as.setFillAfter(true);
 			animation.setAnimationListener(animationListener);
-			as.addAnimation(animation);
+			addAnimation(as, animation);
 
 			if (DBG) {
 				Log.d(LCAT, "animate " + viewProxy + " relative to self: " + (horizontal[0]-x) + ", " + (vertical[0]-y));
 			}
 
-			relayoutChild = true;
 		}
 
 		if (tdm == null && (width != null || height != null)) {
+			TiDimension optionWidth, optionHeight;
 			// we need to setup a custom animation for this, is there a better way?
-			int toWidth = width == null ? w : width;
-			int toHeight = height == null ? h : height;
+			if (width != null) {
+				optionWidth = new TiDimension(width, TiDimension.TYPE_WIDTH);
+			} else {
+				optionWidth = new TiDimension(w, TiDimension.TYPE_WIDTH);
+				optionWidth.setUnits(TypedValue.COMPLEX_UNIT_PX);
+			}
+
+			if (height != null) {
+				optionHeight = new TiDimension(height, TiDimension.TYPE_HEIGHT);
+			} else {
+				optionHeight = new TiDimension(w, TiDimension.TYPE_HEIGHT);
+				optionHeight.setUnits(TypedValue.COMPLEX_UNIT_PX);
+			}
+
+			int toWidth = optionWidth.getAsPixels(view);
+			int toHeight = optionHeight.getAsPixels(view);
 			SizeAnimation sizeAnimation = new SizeAnimation(view, w, h, toWidth, toHeight);
 
 			if (duration != null) {
 				sizeAnimation.setDuration(duration.longValue());
+			}
+
+			// Also wipe out any saved x,y deltas from Translate animation above,
+			// since this size animation is going to reset the layout completely.
+			if (tiView != null) {
+				tiView.setAnimatedXYTranslationValues(new Point(0, 0));
 			}
 
 			sizeAnimation.setInterpolator(new LinearInterpolator());
@@ -408,14 +423,14 @@ public class TiAnimationBuilder
 
 			relayoutChild = true;
 		}
-		
+
 		if (callback != null || animationProxy != null) {
 			as.setAnimationListener(animationListener);
 		}
 
 		return as;
 	}
-	
+
 	protected class SizeAnimation extends Animation
 	{
 		protected View view;
@@ -443,18 +458,18 @@ public class TiAnimationBuilder
 			
 			int width = 0;
 			if (fromWidth == toWidth) {
-				width = (int)fromWidth;
+				width = (int) fromWidth;
 
 			} else {
-				width = (int)Math.floor(fromWidth + ((toWidth - fromWidth) * interpolatedTime));
+				width = (int) FloatMath.floor(fromWidth + ((toWidth - fromWidth) * interpolatedTime));
 			}
 
 			int height = 0;
 			if (fromHeight == toHeight) {
-				height = (int)fromHeight;
+				height = (int) fromHeight;
 
 			} else {
-				height = (int)Math.floor(fromHeight + ((toHeight - fromHeight) * interpolatedTime));
+				height = (int) FloatMath.floor(fromHeight + ((toHeight - fromHeight) * interpolatedTime));
 			}
 			
 			ViewGroup.LayoutParams params = view.getLayoutParams();
@@ -464,7 +479,9 @@ public class TiAnimationBuilder
 			if (params instanceof TiCompositeLayout.LayoutParams) {
 				TiCompositeLayout.LayoutParams tiParams = (TiCompositeLayout.LayoutParams)params;
 				tiParams.optionHeight = new TiDimension(height, TiDimension.TYPE_HEIGHT);
+				tiParams.optionHeight.setUnits(TypedValue.COMPLEX_UNIT_PX);
 				tiParams.optionWidth = new TiDimension(width, TiDimension.TYPE_WIDTH);
+				tiParams.optionWidth.setUnits(TypedValue.COMPLEX_UNIT_PX);
 			}
 
 			view.setLayoutParams(params);
@@ -558,7 +575,7 @@ public class TiAnimationBuilder
 				started = true;
 				view.setBackgroundDrawable(transitionDrawable);
 				long duration = this.getDuration();
-				int durationInt = (new Long(duration)).intValue();
+				int durationInt = Long.valueOf(duration).intValue();
 				transitionDrawable.startTransition(durationInt);
 			}
 		}
@@ -568,7 +585,6 @@ public class TiAnimationBuilder
 	{
 		public void onAnimationEnd(Animation a)
 		{
-
 			if (relayoutChild) {
 				LayoutParams params = (LayoutParams) view.getLayoutParams();
 				TiConvert.fillLayout(options, params);
